fix sizing, spacing, alignment for displayCard

--- a/src/ui/views/displayCard/displayCard.css
+++ b/src/ui/views/displayCard/displayCard.css
@@ -4,6 +4,9 @@
     overflow-y: auto;
     min-width: 406px;
     flex: 0;
+    display: flex;
+    flex-direction: column;
+    gap: var(--sl-spacing-small);
 }
 
 .display-card-view .buttons-container {
@@ -18,9 +21,11 @@
 .card-viewport {
     position: relative;
     overflow: hidden;
-    width: 100%;
+    max-width: 100%;
     height: auto;
     aspect-ratio: 375 / 523;
+    display: inline-block;
+    align-self: center;
 }
 
 .card-canvas {
